# python-rust-template

./: .gitignore  Cargo.toml  README.md  lint.sh  pyproject.toml  unittest.sh
.github/workflows/: main.yml
python/testpkg/: __init__.py  logging.py  main.py
python/testpkg/cli/: cli_add.py  cli_main.py
src/: lib.rs
src/testpkg/: __init__.py
test/: test_main.py
