[build-system]
requires = [
    "maturin>=0.14,<0.15",
    "setuptools>=40.8.0"
]
build-backend = "maturin"

[project]
name = "testpkg"
version = "0.0.1"
description = "Test python package"
requires-python = ">=3.10"
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"

[project.scripts]
testpkg = "testpkg.cli.cli_main:run"
